# media_manager

./: .gitignore  Cargo.toml
src/: main.rs  media_location.rs  persistence.rs
src/components/: media_location.rs
widget/: Cargo.toml
widget/src/: lib.rs
