[package]
name = "media_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.13.1"
turbosql = "0.11.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
directories-next = "2.0.0"
async-std = "1.13.0"
iced_aw = "0.11.0"
